--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
       LOADING
    </div>
-   <section id="container">
+   <div id="container">
       <!--  header -->
       <header class="header">
          <a class="header__logo" href="index.html"><img src="public/images/logo/ohmyfood@2x.svg"
@@ -55,7 +55,7 @@
          </form>
          <!-- Section slogan -->
          <div class="slogan">
-            <h1>Réservez le menu qui vous convient</h1>
+            <h2>Réservez le menu qui vous convient</h2>
             <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
             <button class="btn cursor">
                Explorer nos restaurants
@@ -162,7 +162,7 @@
             </ul>
          </nav>
       </footer>
-   </section>
+   </div>
 </body>
 
 </html>
